--- a/Ink Canvas/MainWindow.xaml
+++ b/Ink Canvas/MainWindow.xaml
@@ -3894,6 +3894,22 @@
                                             <Button x:Name="RefreshDeviceInfoButton" Content="刷新设备信息" 
                                                     Width="120" Height="30" Margin="0,8,0,0"
                                                     Click="RefreshDeviceInfo_Click" />
+
+                                            <Line X1="0" Y1="0" X2="460" Y2="0" Stroke="#3f3f46"
+                                                  StrokeThickness="1" Margin="0,6,0,6" />
+
+                                            <ui:SimpleStackPanel Orientation="Horizontal" HorizontalAlignment="Left">
+                                                <TextBlock Text="匿名使用数据上传：" Foreground="#a1a1aa" FontSize="12"
+                                                           VerticalAlignment="Center" />
+                                                <ComboBox x:Name="ComboBoxTelemetryUploadLevel"
+                                                          Width="160"
+                                                          Margin="8,0,0,0"
+                                                          SelectionChanged="ComboBoxTelemetryUploadLevel_SelectionChanged">
+                                                    <ComboBoxItem Tag="0">关闭（不上传）</ComboBoxItem>
+                                                    <ComboBoxItem Tag="1">上传基础数据</ComboBoxItem>
+                                                    <ComboBoxItem Tag="2">上传基础 + 可选数据</ComboBoxItem>
+                                                </ComboBox>
+                                            </ui:SimpleStackPanel>
                                         </ui:SimpleStackPanel>
                                     </Border>
                                     
